# signal-gatewayd

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  upstream-compat.yml
docs/: manual-real-signal-testing.md
gateway-admin/: Cargo.toml
gateway-admin/src/: lib.rs
gateway-core/: Cargo.toml
gateway-core/src/: lib.rs
gateway-http/: Cargo.toml
gateway-http/src/: lib.rs
gateway-signal/: Cargo.toml
gateway-signal/src/: lib.rs
gateway-store/: Cargo.toml
gateway-store/src/: lib.rs
gatewayd/: Cargo.toml
gatewayd/src/: main.rs
gatewayd/tests/: manual_gateway_smoke.rs
scripts/: manual-real-signal-smoke.sh
