[package]
name = "gateway-signal"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
gateway-core = { path = "../gateway-core" }
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
