[package]
name = "gatewayd"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
presage-backend = ["gateway-signal/presage-backend"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
gateway-core = { path = "../gateway-core" }
gateway-http = { path = "../gateway-http" }
gateway-signal = { path = "../gateway-signal" }
gateway-store = { path = "../gateway-store" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde_json.workspace = true
tokio.workspace = true
